# appId: host.exp.Exponent # This is the app ID for testing with Expo Go.
appId: com.jeral495.rn-course-app # Development build
---
# Launch the app
- launchApp

# Assert that the "Home" text is visible
- extendedWaitUntil:
    visible:
      id: "home"
    timeout: 15000 # wait for 15 seconds

- tapOn: "Admin.*" # Admin tab
- assertVisible: "You don't have access"
- tapOn: "Become an Admin"
- assertVisible: "Hello Jeral"
- killApp
